--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 
   <body>
       <h1>HOLA</h1>
-    Hello there, awesome person! 
+<img src="https://avatars.githubusercontent.com/u/67886120?v=4">
+
   </body>
 
 </html>
