--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 
   <body>
       <h1>HOLA</h1>
+        <ol>
+            <li>google.com</li>
+            <li>canva.com</li>
+            <li>figma.com</li>
+        </ol>    
 <img src="https://avatars.githubusercontent.com/u/67886120?v=4">
 
   </body>
