--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <ol>
             <li>google.com</li>
             <li>canva.com</li>
-            <li>figma.com</li>
+      <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
         </ol>    
 <img src="https://avatars.githubusercontent.com/u/67886120?v=4">
 
