--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
 
   <body>
-      <h1> Aswinkrishna B<h1>
+      <h1> Aswinkrishna B</h1>
     Hello there, awesome person! 
 =======
       <h1>HOLA</h1>
